--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap-sass": "^3.3.7",
     "broccoli-asset-rev": "^2.4.5",
+    "devtron": "^1.4.0",
+    "electron-forge": "^4.1.6",
+    "electron-prebuilt-compile": "1.8.2-beta.3",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.17.0",
     "ember-cli-app-version": "^3.0.0",
@@ -27,17 +34,28 @@
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.1.1",
+    "ember-cli-sass": "^7.1.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "~2.17.0",
+    "ember-electron": "^2.7.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.17.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "semantic-ui-ember": "^2.0.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
+  },
+  "dependencies": {
+    "electron-compile": "^6.4.2",
+    "electron-protocol-serve": "^1.3.0",
+    "electron-squirrel-startup": "^1.0.0"
+  },
+  "config": {
+    "forge": "./ember-electron/electron-forge-config.js"
   }
 }
